--- a/StopBy/app/src/main/res/values/strings.xml
+++ b/StopBy/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="login">Login</string>
     <string name="search">Search</string>
     <string name="title_activity_maps">Map</string>
+    <string name="post">Post</string>
 </resources>
