--- a/StopBy/app/src/main/res/values/strings.xml
+++ b/StopBy/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="search">Search</string>
     <string name="title_activity_maps">Map</string>
     <string name="post">Post</string>
+    <string name="settings">Settings</string>
+    <string name="Profile">Profile</string>
 </resources>
