--- a/StopBy/app/src/main/res/values/strings.xml
+++ b/StopBy/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="post">Post</string>
     <string name="settings">Settings</string>
     <string name="Profile">Profile</string>
+    <string name="hangoutButton">Hangout</string>
+    <string name="studyButton">Study</string>
+    <string name="timeField">Time</string>
+    <string name="placeField">Place</string>
+    <string name="postButton">Post</string>
 </resources>
