--- a/StopBy/app/src/main/res/values/strings.xml
+++ b/StopBy/app/src/main/res/values/strings.xml
@@ -42,5 +42,6 @@
     <string name="profile_usernameTag">Username:</string>
     <string name="profile_emailTag">Email:</string>
     <string name="profile_userInfoTag">User Info:</string>
+    <string name="close">Close</string>
 
 </resources>
