--- a/StopBy/app/src/main/res/values/strings.xml
+++ b/StopBy/app/src/main/res/values/strings.xml
@@ -60,4 +60,19 @@
     //chat page
     <string name="chat_message_view_hint">Enter your text here</string>
 
+    //locations
+    <string name="capen">Capen</string>
+    <string name="davis">Davis</string>
+    <string name="lockwood">Lockwood</string>
+    <string name="su">Student Union</string>
+
+    <string name="choose_location">Choose Location</string>
+    <string-array name="choose_location_spinner">
+        <item>Current Location</item>
+        <item>Capen</item>
+        <item>Davis</item>
+        <item>Lockwood</item>
+        <item>Student Union</item>
+    </string-array>
+
 </resources>
