any active post will be automatically deleted when the user logs out

--- a/StopBy/app/src/main/res/values/strings.xml
+++ b/StopBy/app/src/main/res/values/strings.xml
@@ -70,7 +70,7 @@
     <string name="davis">Davis</string>
     <string name="lockwood">Lockwood</string>
     <string name="su">SU</string>
-    <string name="current_location">current location</string>
+    <string name="current_location">Current Location</string>
 
     <string name="choose_location">Choose Location</string>
     <string-array name="choose_location_spinner">
